# vkguide-rs

./: Cargo.toml  README.md  compile_shaders.sh
src/: gltf.rs  main.rs  pipeline.rs  resources.rs  scene.rs  ui.rs  util.rs
src/pipeline/: egui.rs  mesh.rs
src/scene/: mesh.rs  model.rs
src/shaders/: egui.frag  egui.vert  gradient.comp.hlsl  mesh.frag  mesh.vert  triangle.frag.hlsl  triangle.vert.hlsl
src/shaders/spirv/: egui.frag.spv  egui.vert.spv  gradient.comp.spv  mesh.frag.spv  mesh.vert.spv
