[package]
name = "engine-vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
winit = "0.28.7"
raw-window-handle = "0.5"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
log = "0.4.21"
env_logger = "0.11.3"
bytemuck = { version = "1.15.0" , features = ["derive"]}
glam = "0.27.0"
gltf = { version = "1.4.0" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.3"

# build dependencies in release mode
[profile.dev.package."*"]
opt-level = 3
