[package]
name = "engine-vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.29.15"
raw-window-handle = "0.6.0"
gpu-alloc = { git = "https://github.com/realmayus/gpu-alloc.git"}
gpu-alloc-ash = { git = "https://github.com/realmayus/gpu-alloc.git"}
log = "0.4.21"
env_logger = "0.11.3"
bytemuck = { version = "1.15.0" , features = ["derive"]}
glam = "0.27.0"
gltf = { version = "1.4.0" }
egui-winit = "0.27.2"
egui = "0.27.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4.0"

# build dependencies in release mode
[profile.dev.package."*"]
opt-level = 3
